--- a/src/pages/Dashboards/style.css
+++ b/src/pages/Dashboards/style.css
@@ -5,6 +5,7 @@ body{
 
 .DashboardPage{
     background-color: black;
-    height: 100vh;
-    margin-left: 25px;
+    /* height: 100vh; */
+    /* margin-left: 20px; */
+  
 }
