--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,29 +1,28 @@
-/* Sidebar */
+
 .drawerPaper {
-    width: 240px; /* Replace with your desired width in pixels */
-    background-color: #333;
+    width: 240px; 
     color: white;
     transition: width 0.3s;
   }
   
   .menu-item:hover .menu-icon {
-    transform: scale(1.1); /* Add a scale animation on hover for icons */
-    color: lightgreen !important; /* Change icon color on hover */
+    transform: scale(1.1); 
+    color: lightgreen !important;
   }
   
   .menu-item:hover .menu-text {
-    color: lightgreen ; /* Change text color on hover */
+    color: lightgreen ;
     
   }
   
   .menu-icon {
     color: white;
-    transition: transform 0.2s, color 0.2s; /* Add transition for the icon */
+    transition: transform 0.2s, color 0.2s; 
   }
   
   .menu-text {
     color: white;
-    transition: color 0.2s; /* Add transition for the text */
+    transition: color 0.2s; 
   }
   
   .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
@@ -36,6 +35,27 @@
   }
 
   .selected-item {
-    background-color: yellow; /* You can change this to your desired color */
-    /* Add any other styles you want for selected items */
+    background-color: green; 
+    
+  }
+
+  .logo-container{
+    display: flex;
+    gap: 1rem;
+    margin-top: 2em;
+    justify-content: center;
+  }
+
+  .icon-box{
+    display:flex;
+    align-items:center;
+    gap:1rem;
+    align-items: center;
+    background-color: rgba(46, 35, 35, 0.508);
+    border-radius: 90px;
+    margin-top: 1em;
+    justify-content: center;
+    height: 2rem;
+
+    
   }
