--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -1,5 +1,3 @@
-/* Card.css (you can create a separate CSS file) */
-
 .card {
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -15,12 +13,12 @@
     border-left-width: 1px;
     border-bottom-width: 6px;
     border-radius: 25px;
-    width: 250px; /* Adjust the width and height as needed */
+    width: 250px; 
   height: 150px;
-  border-radius: 20px 20px 20px 20px; /* Bottom-left radius, adjust as needed */
+  border-radius: 20px 20px 20px 20px; 
   background: radial-gradient(circle at bottom left, rgba(53, 125, 53, 0.2), rgba(0, 0, 0, 0));
   box-shadow: 0px 4px 6px rgba(230, 26, 26, 0.1);
-  color: white; /* Text color on the card */
+  color: white; 
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -42,12 +40,14 @@
     font-size: 40px;
     font-weight: bold;
     color: lightgreen; 
-    margin: 0px;/* You can choose your desired color */
+    margin: 0px;
   }
   
   .cardContainer{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: 2.5rem;
+    margin-left: 8rem;
+    /* position:sticky;
+    top: 210px; */
   }
