--- a/src/components/cryptoIcons/style.css
+++ b/src/components/cryptoIcons/style.css
@@ -34,11 +34,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    margin-left: 2.5rem;
+    margin-left: 8em;
     width: fit-content;
     margin-bottom: 1rem;
     margin-top: 1rem;
-
+   /* position: sticky;
+   top: 100px;
+   z-index: 1000; */
 }
 
 body{
