--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,18 +1,21 @@
-/* src/components/Navbar.css */
-
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: black;
     color: white;
-    padding: 10px 20px;
-    margin-left: 40px;
-    padding-top: 15px;
+    padding: 10px;
+    padding-top: 12em;
+    padding-left: 100px;
+    /* padding-right: 200px; */
     padding-bottom: 15px;
-    border-bottom:0.5px solid;
+    border-bottom:0.1mm ridge rgba(144, 238, 144, 0.1) ;
     padding-top:20px ;
-   
+    /* position:fixed;
+    top: 0; 
+    left: 0; 
+    z-index: 1000;
+    width: 80%; */
   }
   
   .navbar__left {
@@ -23,10 +26,12 @@
   .navbar__logo {
     font-size: 24px;
     font-weight: bold;
+    padding-top: 1em;
   }
   
   .navbar__right {
     display: flex;
+    padding-top: 1em;
   }
   
   .navbar__button {
@@ -44,6 +49,5 @@
   .navbar__button.selected {
     background-color: white;
     width: fit-content;
-    color: #000; /* Set text color as needed */
-    /* Add any other styles for the selected button here */
+    color: #000;
   }
